# twitvault

./: .gitignore  Cargo.toml  README.md  build_mac.sh  env.example
.github/workflows/: deploy.yml  rust.yml  static.yml
icons/: Icon.icns
media/: logo.sketch
src/: config.rs  crawler.rs  helpers.rs  importer.rs  main.rs  search.rs  storage.rs  types.rs  ui.rs
src/ui/: app.rs  helpers.rs  list_list.rs  loaded_component.rs  loading_component.rs  login_component.rs  main_component.rs  mod.rs  primary_column.rs  search_list.rs  secondary_column.rs  setup_component.rs  tweet_component.rs  tweet_list.rs  types.rs  user_component.rs  user_list.rs
website/: index.html
