[package]
name = "twatvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
egg-mode = { git = "https://github.com/terhechte/egg-mode"}
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1.0.88"
serde = { version = "1.0.147", features = ["derive"] }
eyre = "0.6.8"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
mime = "0.3.16"
tracing = "0.1.37"
reqwest = "0.11.13"
url = "2.3.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
dioxus = { version = "0.2.4", features = ["desktop", "fermi"] }
obfstr = "0.4.1"
clap = { version = "4.0.26", default_features = false, features = ["std", "help", "usage", "cargo"] }
webbrowser = "0.6.0"
