[package]
name = "twitvault"
version = "0.2.0"
edition = "2021"
description = "Archive your Twitter data into a offline desktop app"
authors = ["Benedikt Terhechte"]
license = "MIT"
readme = "README.md"
keywords = ["app", "dioxus", "archive", "twitter", "desktop", "windows", "macos", "linux"]
categories = ["GUI", "Visualization"]
repository = "https://github.com/terhechte/bevy_quickmenu"
exclude = ["data", "assets", ".vscode", "icons.sketch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
name = "TwitVault"
identifier = "com.stylemac.twitvault"
icon = ["icons/Icon.icns", "icons/win-256.png", "icons/win-32.png"]
version = "0.2.0"
copyright = "Copyright (c) Benedikt Terhechte (2022). All rights reserved."
category = "Social Network"
short_description = "Archive your Twitter data into a offline desktop app"
osx_minimum_system_version = "10.12"
deb_depends = ["libwebkit2gtk-4.0-dev", "libgtk-3-dev", "libayatana-appindicator3-dev", "libsoup2.4-dev"]

[dependencies]
futures = "0.3.25"
egg-mode = { git = "https://github.com/terhechte/egg-mode"}
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1.0.88"
serde = { version = "1.0.147", features = ["derive"] }
eyre = "0.6.8"
dotenvy_macro = "0.15.1"
mime = "0.3.16"
tracing = "0.1.37"
reqwest = "0.11.13"
url = "2.3.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
dioxus = { git = "https://github.com/terhechte/dioxus", features = ["desktop", "fermi"], branch = "argh" }
obfstr = "0.4.1"
clap = { version = "4.0.26", default_features = false, features = ["std", "help", "usage", "cargo"] }
webbrowser = "0.6.0"
regex = "1.7.0"
chrono = "0.4.23"
directories-next = "2.0.0"
dioxus-heroicons = "0.1.4"

[patch.crates-io]
dioxus = { git = "https://github.com/terhechte/dioxus", branch = "argh" }